# TerraCam

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: camera_specifications.json  celestial_specifications.json  filter_specifications.json  lens_specifications.json  ptu_specifications.json
data/spice/: terracam.tm
docs/: ptu_command_index.md
scripts/analysis/: calibrate_reflectance.py  generate_derived_products.py
scripts/capture/: auto_expose.py  capture_image.py  capture_video.py  exposure_predictor.py  live_focus.py
scripts/mission/: coordinator.py  run_celestial_track.py  run_grid_survey.py  run_waypoint_mission.py
src/astro/: __init__.py  ephemeris.py  tracker.py
src/fli/: __init__.py  acquisition.py  system.py
src/fli/core/: __init__.py  camera.py  device.py  filter_wheel.py  lib.py
src/libfli/: Makefile  libfli-camera-usb.c  libfli-camera.c  libfli-filter-focuser.c  libfli.c  libfli.h
src/libfli/unix/: libfli-debug.c  libfli-sys.h
src/libfli/unix/osx/: libfli-usb-sys.c
src/ptu/: __init__.py  controller.py  discovery.py  gpm.py  logger.py
tests/: USB_TEST_README.md  __init__.py  debug_device_id.py  diagnose_camera_detection.py  minimum_exposure_test.py  quick_test.py  saturation_test.py  shutter_control_test.py  timing_optimized_test.py  usb_analysis_test.py  usb_monitor.py
tests/integration/: test_auto_exposure.py  test_both_devices.py  test_filterwheel.py
tests/unit/: __init__.py  test_acquisition.py  test_system.py
tools/: fix_usb_permissions.py
